feat: allow configuring start delay
Sometimes the shell just takes longer to actually start up so the
"sendText" command is executed before the shell is actually ready to
accept commands.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,17 @@
         "mac": "cmd+g g",
         "linux": "ctrl+g g"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "Lazygit",
+      "properties": {
+        "lazygit.startDelay": {
+          "type": "number",
+          "default": 0,
+          "description": "Delay in milliseconds after opening a new terminal before trying to start lazygit"
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
